# prefill-awareness-audit

./: .gitignore  .gitmodules  CLAUDE.md  PROJECT_VISION.md  README.md  SYSTEM_ARCHITECTURE.md  pyproject.toml
.claude/: zones
agent_artefacts/: full-audit-2026-04-22.md  nist-aligned-design-decisions.md  nist-review-working-notes.md  validation-audit-2026-04-20.md  validation-audit-2026-04-21.md
case_studies/: __init__.py  baseline_awareness_audit.py  insider_trading_audit.py  misalignment_audit.py
case_studies/baseline_awareness/: README.md  prepare_data.py
case_studies/baseline_awareness/data/: sample.jsonl
case_studies/bfcl/: README.md
docs/: attribution-probe-investigation.md  design-decisions.md
scripts/: audit_validation_logs.py  run_audit.sh
src/prefill_awareness_audit/: CLAUDE.md  __init__.py  __main__.py  _registry.py  _tasks.py  data.py  task_factory.py  types.py
src/prefill_awareness_audit/analysis/: __init__.py  compare.py  figures.py
src/prefill_awareness_audit/interventions/: __init__.py  deterministic.py  prompts.py  rewrite.py  validator.py
src/prefill_awareness_audit/probes/: __init__.py  _util.py  attribution.py  awareness.py  confidence.py  counterfactual.py  diagnostic.py  fork.py  latent.py  multiple_choice.py  persona.py  prompts.py  reflection.py  spontaneous.py
src/prefill_awareness_audit/scoring/: __init__.py  audit_scorer.py  metrics.py
tests/: test_compare.py  test_data.py  test_integration.py  test_interventions.py  test_metrics.py  test_probes.py  test_scoring.py  test_task_factory.py  test_tasks.py
